--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -82,99 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
+   "id": "6bb02877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_participants_df = participants_df[participants_df['participant_id'] == 'ONC7299'].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1485a5bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "new_samples_df = samples_df[samples_df['participant_id'] == 'ONC7299']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ff6a84fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sample_id</th>\n",
-       "      <th>cnv_seg_fn</th>\n",
-       "      <th>gpdw_DNA_WES_twistv1_cram_or_bam_path</th>\n",
-       "      <th>participant_id</th>\n",
-       "      <th>collection_date_dfd</th>\n",
-       "      <th>preservation_method</th>\n",
-       "      <th>wxs_ploidy</th>\n",
-       "      <th>wxs_purity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>06213_15_BB_061908</td>\n",
-       "      <td>gs://fc-7e497e6c-57f5-4577-a386-e913b4ccbdaa/9...</td>\n",
-       "      <td>gs://fc-2ddff386-1b9d-424e-965b-38f0881bb2eb/G...</td>\n",
-       "      <td>ONC7299</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>1.78</td>\n",
-       "      <td>0.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>06213_15_BB_072208</td>\n",
-       "      <td>gs://fc-7e497e6c-57f5-4577-a386-e913b4ccbdaa/9...</td>\n",
-       "      <td>gs://fc-2ddff386-1b9d-424e-965b-38f0881bb2eb/G...</td>\n",
-       "      <td>ONC7299</td>\n",
-       "      <td>33</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>0.23</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            sample_id                                         cnv_seg_fn  \\\n",
-       "3  06213_15_BB_061908  gs://fc-7e497e6c-57f5-4577-a386-e913b4ccbdaa/9...   \n",
-       "5  06213_15_BB_072208  gs://fc-7e497e6c-57f5-4577-a386-e913b4ccbdaa/9...   \n",
-       "\n",
-       "               gpdw_DNA_WES_twistv1_cram_or_bam_path participant_id  \\\n",
-       "3  gs://fc-2ddff386-1b9d-424e-965b-38f0881bb2eb/G...        ONC7299   \n",
-       "5  gs://fc-2ddff386-1b9d-424e-965b-38f0881bb2eb/G...        ONC7299   \n",
-       "\n",
-       "  collection_date_dfd preservation_method wxs_ploidy wxs_purity  \n",
-       "3                   0                  NA       1.78       0.21  \n",
-       "5                  33                  NA       1.77       0.23  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_samples_df"
    ]
   },
   {
@@ -187,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -214,11 +137,11 @@
     "reviewer = PatientReviewer()\n",
     "reviewer.set_review_data(\n",
     "    # Enter the file path where you would like your pkl file of your review data to be stored\n",
-    "    data_pkl_fn='../../PatientReviewer4.pkl',\n",
+    "    data_pkl_fn='../../PatientReviewer.pkl',\n",
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
-    "    participant_df=participants_df.set_index('participant_id').loc[['ONC7299']],\n",
+    "    participant_df=new_participants_df.set_index('participant_id'),\n",
     "    sample_df=new_samples_df.set_index('sample_id'),\n",
     "    preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data'\n",
     ")\n",
@@ -334,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "id": "ee299041",
    "metadata": {},
    "outputs": [
@@ -352,14 +275,11 @@
       "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
       "\n",
       "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "\n",
+      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
+      "\n",
+      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Selected Tree (idx)': '1'}\n"
      ]
     }
    ],
@@ -370,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29acc415",
+   "id": "258f55d7",
    "metadata": {},
    "outputs": [],
    "source": []
