--- a/example_notebooks/UserPatientReviewer.ipynb
+++ b/example_notebooks/UserPatientReviewer.ipynb
@@ -14,14 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "cd5a4c6f",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "b4bb095f",
    "metadata": {
     "pycharm": {
@@ -67,34 +76,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "b9ce8e67",
    "metadata": {
-    "scrolled": true,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
-      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "samples_df, participants_df = collect_data(\n",
-    "    '../../example_notebooks/example_data/example_patient_reviewer_paired_clean_input.yaml'\n",
+    "    'example_data/example_patient_reviewer_paired_clean_input1.yaml'\n",
     "    #'../../example_notebooks/example_data/example_patient_reviewer_input.yaml'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "id": "6bb02877",
    "metadata": {
     "pycharm": {
@@ -103,12 +103,13 @@
    },
    "outputs": [],
    "source": [
-    "new_participants_df = participants_df[participants_df['participant_id'] == 'ONC7299'].reset_index(drop=True)"
+    "new_participants_df = participants_df[participants_df['participant_id'] == 'ONC7299'].reset_index(drop=True)\n",
+    "# new_participants_df = participants_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "1485a5bd",
    "metadata": {
     "pycharm": {
@@ -117,7 +118,8 @@
    },
    "outputs": [],
    "source": [
-    "new_samples_df = samples_df[samples_df['participant_id'] == 'ONC7299']"
+    "new_samples_df = samples_df[samples_df['participant_id'] == 'ONC7299']\n",
+    "# new_samples_df = samples_df"
    ]
   },
   {
@@ -134,38 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "id": "e496d5e4",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cnv figs directory already exists: ../../example_notebooks/example_data/preprocess_data/cnv_figs\n",
-      "Maf directory already exists: ../../example_notebooks/example_data/preprocess_data/maf_df\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:189: FutureWarning:\n",
-      "\n",
-      "The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reviewer = PatientReviewer()\n",
     "reviewer.set_review_data(\n",
     "    # Enter the file path where you would like your pkl file of your review data to be stored\n",
-    "    data_pkl_fn='../../PatientReviewer.pkl',\n",
+    "    data_pkl_fn='../PatientReview.pkl',\n",
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
@@ -173,7 +156,7 @@
     "    sample_df=new_samples_df.set_index('sample_id'),\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(drivers_fn='../../example_notebooks/example_data/drivers.csv')\n",
+    "reviewer.set_review_app(drivers_fn='example_data/drivers1.csv')\n",
     "reviewer.set_default_review_data_annotations_configuration()\n",
     "reviewer.set_default_autofill()\n"
    ]
@@ -192,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "119080a6",
    "metadata": {
     "pycharm": {
@@ -231,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "df4ef73d",
    "metadata": {
     "pycharm": {
@@ -274,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "f6e4e9a6",
    "metadata": {
     "pycharm": {
@@ -312,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "id": "ee299041",
    "metadata": {
     "pycharm": {
@@ -324,6 +307,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Setting auto_export_path to ../PatientReview.auto_export\n",
+      "Making directory ../PatientReview.auto_export for auto exporting.\n",
+      "Using ../PatientReview.auto_export for auto exporting.\n",
       "Dash app running on http://0.0.0.0:8089/\n"
      ]
     },
@@ -331,13 +317,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
+      "/Users/svansete/Code/getzlab/AnnoMate/annoEnv/lib/python3.9/site-packages/google/auth/_default.py:78: UserWarning:\n",
       "\n",
-      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
-      "\n",
-      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
-      "\n",
-      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
       "\n"
      ]
     }
@@ -375,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
